[project]
name = "breakme"
version = "0.1.0"
description = "Minimal bug example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.1.3",
    "litestar[standard]>=2.12.1",
    "markdown>=3.7",
    "msgspec>=0.18.6",
    "python-frontmatter",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-markdown>=3.7.0.20240822",
    "types-requests>=2.32.0.20241016",
]

[tool.uv.sources]
python-frontmatter = { git = "https://github.com/eyeseast/python-frontmatter" }

# add --explicit-package-bases for mypy
[tool.mypy]
explicit_package_bases = true
